kubernetes/edia-sns-java-sample-tst.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: edia-sns-java-sample
  labels:
   run: edia-sns-java-sample
spec:
  ports:
    - port: 8080
      nodePort: 30500
  selector:
    app: edia-sns-java-sample
  type: NodePort
