kubernetes/edia-sns-java-sample.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edia-sns-java-sample
  labels:
    app: edia-sns-java-sample
spec:
  selector:
    matchLabels:
      app: edia-sns-java-sample
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: edia-sns-java-sample
    spec:
      imagePullSecrets:
      - name: edia-registry-credential
      containers:
        - name: edia-sns-java-sample
          image: 'docker-registry.edia.nl/edia-sns-java-sample:<TAG>'
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 20
          resources:
            limits:
              memory: 500Mi
            requests:
              memory: 250Mi
---
apiVersion: v1
kind: Service
metadata:
  name: edia-sns-java-sample
  labels:
   run: edia-sns-java-sample
spec:
  ports:
    - port: 8080
  selector:
    app: edia-sns-java-sample
