kubernetes/opensns-betermetelkaar-ssolaunch-samenbeter-emulator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edia-sns-java-sample
  labels:
    app: edia-sns-java-sample
spec:
  selector:
    matchLabels:
      app: edia-sns-java-sample
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: edia-sns-java-sample
    spec:
      imagePullSecrets:
      - name: edia-registry-credential
      containers:
        - name: edia-sns-java-sample
          image: 'docker-registry.edia.nl/edia-sns-java-sample:<TAG>'
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: edia-sns-java-sample
  labels:
   run: edia-sns-java-sample
spec:
  ports:
    - port: 8080
  selector:
    app: edia-sns-java-sample
